[gd_scene load_steps=2 format=3 uid="uid://cwvhqo7s352tp"]

[ext_resource type="Script" path="res://scripts/survey_label.gd" id="1_o3ucm"]

[node name="SurveyLabel" type="ColorRect"]
offset_top = 304.0
offset_right = 544.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_o3ucm")

[node name="Surveying" type="Label" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "Surveying"

[node name="Accent1" type="Label" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "<             >"

[node name="Accent2" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "<               >"

[node name="Accent3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 208.0
offset_top = 8.0
offset_right = 360.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "<                 >"

[node name="Accent4" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 200.0
offset_top = 8.0
offset_right = 360.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "<                   >"
